{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "1034ab0f-49cb-4969-8be1-c27b5f55da78",
            "actions": [
                {
                    "name": "Interactive",
                    "type": "Button",
                    "id": "bd998e5a-6ace-45e7-9f65-8fc9e35315d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scream",
                    "type": "Button",
                    "id": "3dc5d1dc-e946-47bf-afe2-117fc6a8fa81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitState",
                    "type": "Button",
                    "id": "b0076250-eb99-429c-ba54-7339a8b63168",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c682626-534c-41b3-956b-a309f3fde053",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interactive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e630043-0d55-422a-981e-9e8dccbd0dcd",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scream",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27a2e36c-03d1-439b-8cf0-2a2948f2e99c",
                    "path": "<Keyboard>/e",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "ExitState",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}